[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.19"
wgpu = "0.17.0"
pollster = "0.3.0"


# WASM Support
[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "0.17.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

